--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.4.0'
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.alibaba:fastjson:1.2.41'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 //    apt 'com.android.databinding:compiler:3.0.0'
