--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         <activity android:name=".mvp.ui.activities.CommercialHouseSellActivity" />
         <activity
             android:name=".mvp.ui.activities.DrawerActivity"
-            android:label="@string/title_activity_drawer"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
