--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/smoothcompoundbuttonlibrary.jar')
-    compile files('libs/AMap_Location_V3.2.1_20161228.jar')
+    compile files('libs/AMap2DMap_5.2.0_AMapLocation_3.6.1_20171012.jar')
     compile('com.github.ganfra:material-spinner:2.0.0') {
         exclude group: 'com.android.support'
     }
