--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.chengjian.java.feidian.collectdata">
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,10 +29,9 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="e9dfde9b90a971f41eb0b55ec077e2ed"/>
+            android:value="e9dfde9b90a971f41eb0b55ec077e2ed" />
 
-        <activity android:name=".mvp.ui.activities.MainActivity">
-        </activity>
+        <activity android:name=".mvp.ui.activities.MainActivity"></activity>
         <activity android:name=".mvp.ui.activities.HouseRentActivity" />
         <activity android:name=".mvp.ui.activities.HouseSellActivity" />
         <activity android:name=".mvp.ui.activities.ShopRentActivity" />
@@ -40,11 +40,14 @@
             android:name=".mvp.ui.activities.DrawerActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".mvp.ui.activities.dataAdder.CommercialHouseTradeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
