--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="e9dfde9b90a971f41eb0b55ec077e2ed" />
-
-        <activity android:name=".mvp.ui.activities.MainActivity"/>
+        <service android:name="com.amap.api.location.APSService"/>
+        <activity android:name=".mvp.ui.activities.MainActivity" />
         <activity android:name=".mvp.ui.activities.HouseRentActivity" />
         <activity android:name=".mvp.ui.activities.HouseSellActivity" />
         <activity android:name=".mvp.ui.activities.ShopRentActivity" />
@@ -45,11 +45,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".mvp.ui.activities.dataAdder.CommercialHouseTradeActivity">
-
-        </activity>
+        <activity android:name=".mvp.ui.activities.MapActivity"/>
     </application>
 
 </manifest>
