差不多就做完了

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 //    })
 //    compile files('libs/smoothcompoundbuttonlibrary.jar')
     compile 'com.amap.api:map2d:5.2.0'
+//    compile 'com.amap.api:search:5.5.0'
     compile 'com.amap.api:location:3.6.1'
     compile('com.github.ganfra:material-spinner:2.0.0') {
         exclude group: 'com.android.support'
