float转为了string，还加了权限的申请

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.yanzhenjie:permission:1.1.2'
 //    apt 'com.android.databinding:compiler:3.0.0'
 }
