--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 29 16:19:00 CST 2017
-sdk.dir=C\:\\Users\\xiang\\AppData\\Local\\Android\\Sdk
+#Mon Dec 25 15:15:23 CST 2017
+ndk.dir=/home/Developer/Workspace/Sdks/android-sdk-linux/ndk-bundle
+sdk.dir=/home/Developer/Workspace/Sdks/android-sdk-linux
