--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 25 15:15:23 CST 2017
-ndk.dir=/home/Developer/Workspace/Sdks/android-sdk-linux/ndk-bundle
-sdk.dir=/home/Developer/Workspace/Sdks/android-sdk-linux
+#Tue Dec 26 15:41:21 CST 2017
+sdk.dir=C\:\\Users\\xiang\\AppData\\Local\\Android\\Sdk
