--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,13 +41,18 @@
             android:name=".mvp.ui.activities.DrawerActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".mvp.ui.activities.MapActivity" />
+        <activity android:name=".mvp.ui.activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mvp.ui.activities.MapActivity" />
     </application>
 
 </manifest>
