--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
-/.gradle/
-app/libs/
-build/
+.gradle/*
+app/libs/*
+build/*
 release/
-/.idea/
-.gitignore
+.idea/*
