--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,18 @@
 app/libs/
 build/
 release/
-/.idea/
+.idea/
 .gitignore
+# IDEA
+*.iml
+.idea/
+.idea/.name
+.idea/encodings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/libraries
