--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "org.chengjian.java.feidian.collectdata"
         minSdkVersion 21
@@ -41,10 +41,10 @@ dependencies {
     }
     testCompile 'junit:junit:4.12'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:25.4.0'
-    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:design:+'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
@@ -62,7 +62,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.2.3'
     compile 'com.daimajia.numberprogressbar:library:1.4@aar'
     compile 'org.greenrobot:essentials:3.0.0-RC1'
-    compile 'com.android.support:cardview-v7:25.4.0'
+    compile 'com.android.support:cardview-v7:+'
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.alibaba:fastjson:1.2.41'
