--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,77 +1,82 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "org.chengjian.java.feidian.collectdata"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.1"
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
-
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
-
     dataBinding {
         enabled = true
     }
-
 }
 
 dependencies {
-//    compile fileTree(include: ['*.jar'], dir: 'libs')
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-//    compile files('libs/smoothcompoundbuttonlibrary.jar')
-    compile 'com.amap.api:map2d:5.2.0'
-//    compile 'com.amap.api:search:5.5.0'
-    compile 'com.amap.api:location:3.6.1'
-    compile('com.github.ganfra:material-spinner:2.0.0') {
+    //    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    //        exclude group: 'com.android.support', module: 'support-annotations'
+    //    })
+    //    compile files('libs/smoothcompoundbuttonlibrary.jar')
+    implementation 'com.amap.api:map2d:5.2.0'
+    implementation 'com.amap.api:location:3.6.1'
+    implementation('com.github.ganfra:material-spinner:2.0.0') {
         exclude group: 'com.android.support'
     }
-    testCompile 'junit:junit:4.12'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:+'
-    compile 'com.android.support:design:+'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-    compile 'com.github.bmelnychuk:atv:1.2.9'
-    compile 'com.github.johnkil.print:print:1.2.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:retrofit-adapters:2.1.0'
-    compile 'io.reactivex:rxjava:1.2.3'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-    compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.2.3'
-    compile 'com.daimajia.numberprogressbar:library:1.4@aar'
-    compile 'org.greenrobot:essentials:3.0.0-RC1'
-    compile 'com.android.support:cardview-v7:+'
-    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
-    compile 'com.github.markushi:circlebutton:1.1'
-    compile 'com.alibaba:fastjson:1.2.41'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.github.bmelnychuk:atv:1.2.9'
+    implementation 'com.github.johnkil.print:print:1.2.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit-adapters:2.1.0'
+    implementation 'io.reactivex:rxjava:1.2.3'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    implementation 'com.afollestad.material-dialogs:core:0.9.2.3'
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
+    implementation 'org.greenrobot:essentials:3.0.0-RC1'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation 'com.github.markushi:circlebutton:1.1'
+    implementation 'com.alibaba:fastjson:1.2.41'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.yanzhenjie:permission:1.1.2'
-//    apt 'com.android.databinding:compiler:3.0.0'
+    implementation 'com.yanzhenjie:permission:1.1.2'
+    //    apt 'com.android.databinding:compiler:3.0.0'
     compileOnly 'javax.annotation:javax.annotation-api:1.2'
-    compileOnly "org.projectlombok:lombok:1.16.18"
+    compileOnly 'org.projectlombok:lombok:1.16.18'
     annotationProcessor "org.projectlombok:lombok:1.16.18"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:support-v13:27.1.0'
+}
+repositories {
+    mavenCentral()
 }
