１、修改了数据提交的方式，本地存储完成，明天完成网络提交。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <activity android:name=".mvp.ui.activities.HouseRentActivity" />
         <activity android:name=".mvp.ui.activities.HouseSellActivity" />
-        <activity android:name=".mvp.ui.activities.ShopRentActivity" />
+        <activity android:name=".mvp.ui.activities.CounterActivity" />
         <activity android:name=".mvp.ui.activities.CommercialHouseSellActivity" />
         <activity
             android:name=".mvp.ui.activities.DrawerActivity"
